# EA_with_Python

./: .gitignore  README.md  compile_commands.json
python_for_ea/: AGENTS.md  README.md  get_entry_reply.py  get_trend_reply.py  pyproject.toml
python_for_ea/.agents/skills/fastapi-api/: SKILL.md
python_for_ea/.agents/skills/oracle-select/: oracle-select_SKILL.md
python_for_ea/.agents/skills/python-base/: SKILL.md
python_for_ea/.agents/skills/python-logging/: SKILL.md
python_for_ea/.agents/skills/python-settings/: SKILL.md
python_for_ea/.cursor/rules/: fastapi.mdc  logging.mdc  oracle.mdc  pandas.mdc  project.mdc  pytest.mdc  python.mdc  settings.mdc  sqlserver.mdc  streamlit.mdc
python_for_ea/.github/: copilot-instructions.md
python_for_ea/.github/instructions/: fastapi.instructions.md  logging.instructions.md  oracle.instructions.md  pandas.instructions.md  pytest.instructions.md  python.instructions.md  settings.instructions.md  sqlserver.instructions.md  streamlit.instructions.md
python_for_ea/bat/: get_entry_reply.bat  get_trend_reply.bat
python_for_ea/docs/architecture/: folder-structure.md
python_for_ea/docs/refactor/: gold_strategy_20260503.md
python_for_ea/src/ea_py/: __init__.py  config.py  constants.py  openai_client.py  paths.py  types.py
python_for_ea/tests/unit/: test_config.py  test_debug_logs.py  test_imbalance.py  test_ohlc_csv.py  test_openai_client.py  test_paths.py  test_target_prices.py  test_trend_state.py  test_volatility.py
python_for_ea/work/: HIT-EA_refactor_ver3_restore.mq5  get_entry_reply.py  get_trend_reply.py
(+67 files in other folders)
