[project]
name = "ea_py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.136.1",
    "markitdown[all]>=0.1.5",
    "matplotlib>=3.10.9",
    "openai>=2.33.0",
    "pandera>=0.30.1",
    "pyodbc>=5.3.0",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "ruff>=0.15.7",
    "streamlit>=1.55.0",
    "streamlit-aggrid>=1.2.1.post2",
    "streamlit-option-menu>=0.4.0",
    "ty>=0.0.24",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
exclude = ["work"]
